src/objects/Agile_Reports__c.object
<CustomObject>
    <fields>
        <fullName>Created_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>D_B_hours__c</fullName>
        <label>D+B hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Status__c</fullName>
        <label>Original Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Identify: New Requirement</fullName>
                </value>
                <value>
                    <fullName>Identify: Submit for Business Review</fullName>
                </value>
                <value>
                    <fullName>Identify: Deferred</fullName>
                </value>
                <value>
                    <fullName>Consolidate: Approve to Estimate</fullName>
                </value>
                <value>
                    <fullName>Consolidate: Level of Effort Complete</fullName>
                </value>
                <value>
                    <fullName>Consolidate: Submit for CCB Review</fullName>
                </value>
                <value>
                    <fullName>Approve: Approved to Deploy</fullName>
                </value>
                <value>
                    <fullName>Release: Design</fullName>
                </value>
                <value>
                    <fullName>Release: Build</fullName>
                </value>
                <value>
                    <fullName>Release: Test</fullName>
                </value>
                <value>
                    <fullName>Release: SIT</fullName>
                </value>
                <value>
                    <fullName>Release: UAT</fullName>
                </value>
                <value>
                    <fullName>Release: Build Production</fullName>
                </value>
                <value>
                    <fullName>Release: Test Production</fullName>
                </value>
                <value>
                    <fullName>Close: Deployed</fullName>
                </value>
                <value>
                    <fullName>Close: Rejected</fullName>
                </value>
                <value>
                    <fullName>Close: Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requirement_ID__c</fullName>
        <description>Requirement ID from Requirements Report Sprint 1</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Requirement ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <formula>if(Created_Date__c = DATE(2016,10,10) , Created_Date__c,DATEVALUE(CreatedDate) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sprint_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sprint Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_new__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <color>#FF0000</color>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <color>#FF9900</color>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Done</fullName>
                    <color>#006600</color>
                    <label>Done</label>
                </value>
                <value>
                    <fullName>Others</fullName>
                    <color>#3366FF</color>
                    <label>Others</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teams__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Teams</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_hours__c</fullName>
        <label>Test hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Agile Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Requirement_ID__c</columns>
        <columns>Status_new__c</columns>
        <columns>Original_Status__c</columns>
        <columns>D_B_hours__c</columns>
        <columns>Test_hours__c</columns>
        <columns>Created_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Teams__c</columns>
        <columns>Sprint_Name__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Agile Reports Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agile Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>